[package]
name = "fj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = "1.0.71", features = ["backtrace"] }
clap = { workspace = "4.3.11", features = ["derive"] }
colored = "2.0.4"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
either = "1.9.0"
git-url-parse = "0.4.4"
http = "0.2.9"
octocrab = { version = "*" }
secrecy = "0.8.0"
serde = { version = "1.0" }
tokio = { version = "1.29.1", features = ["full", "fs"] }
toml = "0.7.6"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
webbrowser = "0.8.11"
which = { version = "4.4.0" }
xdg = "2.5.2"
