[package]
name = "fjf"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nicholaslyang/fjf"
description = "A simple CLI for GitHub check runs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.3.11", features = ["derive"] }
colored = "2.0.4"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
either = "1.9.0"
git-url-parse = "0.4.4"
http = "0.2.9"
octocrab = "0.31.0"
secrecy = "0.8.0"
serde = { version = "1.0" }
tokio = { version = "1.29.1", features = ["full", "fs"] }
toml = "0.7.6"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
webbrowser = "0.8.11"
which = { version = "4.4.0" }
xdg = "2.5.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
